--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "joi": "^17.10.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.0",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "redis": "^4.6.8"
   }
 }
