--- a/package.json
+++ b/package.json
@@ -4,18 +4,22 @@
   "description": "this is a game store",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/index.js",
-    "start": "node src/index.js"
+    "test": "set NODE_ENV=test&& set NODE_OPTIONS=--experimental-vm-modules && jest --testTimeout=30000 --watchAll --no-cache --detectOpenHandles --forceExit",
+    "dev": "set NODE_ENV=local&& nodemon src/index.js",
+    "start": "set NODE_ENV=production&& node src/index.js"
   },
   "author": "dario bartoli",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "@faker-js/faker": "^8.1.0",
+    "jest": "^29.7.0",
+    "nodemon": "^3.0.1",
+    "supertest": "^6.3.3"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
     "cloudinary": "^1.40.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "joi": "^17.10.1",
