--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.0",
     "multer": "^1.4.5-lts.1",
-    "redis": "^4.6.8"
+    "redis": "^4.6.8",
+    "socket.io": "^4.7.2"
   }
 }
