--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
     "express": "^4.18.2",
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.3.0",
     "mongoose": "^8.0.3",
     "multer": "^1.4.5-lts.1",
-    "redis": "^4.6.12",
-    "socket.io": "^4.7.3"
+    "redis": "^4.6.12"
   }
 }
